# django-app

./: .gitignore  README.rst  \  devenv.nix  pyproject.toml
mysite/: settings.py
polls/: admin.py  models.py  stabilizers.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/admin/: base_site.html
polls/templates/polls/: detail.html  index.html  results.html
templates/polls/: detail.html  index.html
