[build-system]
requires = ["setuptools>=69.3"]
build-backend = "setuptools.build_meta"

[project]
name = "polls"
version = "0.1"
dependencies = [ "django>=5.2"]
description = "A Django app to conduct web-based polls"
readme = "README.rst"
requires-python = ">3.11"
authors = [{ name = "big-o", email = "bigo@email.com"}]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python 3",
    "Programming Language :: Python 3 :: Only",
    "Programming Language :: Python 3.11",
    "Programming Language :: Python 3.12",
    "Programming Language :: Python 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content"
]

[project.urls]
Homepage = "https://www.example.com"